--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 0 1px #999, inset 0 0 0 1px #FFF;
     background: #ecf0f1;
+    border: 2px solid #D5D5E6;
+    outline: #000B2B outset 1px;
+    border-radius: 3px;
 }
 .wrapper.no-margin {
     margin-top: 0;
