--- a/flair.css
+++ b/flair.css
@@ -13,3 +13,7 @@
 .flair-icon362{background:0 -6992px} .flair-icon363{background:0 -7011px} .flair-icon364{background:0 -7030px} .flair-icon365{background:0 -7049px} .flair-icon366{background:0 -7068px} .flair-icon367{background:0 -7087px} .flair-icon368{background:0 -7106px} .flair-icon369{background:0 -7125px} .flair-icon370{background:0 -7144px} .flair-icon371{background:0 -7163px} .flair-icon372{background:0 -7182px} .flair-icon373{background:0 -7201px} .flair-icon374{background:0 -7220px} .flair-icon375{background:0 -7239px}
 .flair-all{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
 .flair-ff{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
+.flair-be{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
+.flair-spoff{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
+.flair-collab{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
+.flair-glex{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
