--- a/flair.css
+++ b/flair.css
@@ -17,3 +17,4 @@
 .flair-spoff{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
 .flair-collab{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
 .flair-glex{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
+.flair-other{background-image:url(https://a.thumbs.redditmedia.com/7Cvvl6zBz_WNH0AlF1rk8q8sBvHVgu7wAQHrH7SGd94.png) !important}
