--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
 .clearfix, .cf {zoom:1;}
 .hide { display: none !important; }
 
+/* Will this work? */
+
+div#flair-selection-flair {
+    image-rendering: pixelated;
+    zoom: 200%;}
+
 .wrapper {
     width: 100%;
     max-width: 792px;
@@ -185,9 +191,6 @@ button:active, input[type=submit]:active {
     cursor: pointer;
     margin: 6px 2px;
     position: relative;
-    border: 1px solid #D5D5E6;
-    outline: rgba(0, 11, 43, 0.69) outset 1px;
-    border-radius: 2px;
 }
 .flair:not([class*='flair-']) {
     background: rgba(0,0,0,0.03);
